<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_grey_24dp"
        android:title="@string/home"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/dashboard"
        android:icon="@drawable/ic_dashboard_grey_24dp"
        android:title="@string/dashboard"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/notifications"
        android:icon="@drawable/ic_notifications_grey_24dp"
        android:title="@string/notification"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profile_grey_24dp"
        android:title="@string/profile"
        app:showAsAction="ifRoom"/>

</menu>